// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfidencePills (Bundle C §5) snapshot — Price pill hidden, mixed strengths 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": 8,
      "paddingVertical": 4,
    }
  }
  testID="confidence-pills"
>
  <View
    accessibilityRole="button"
    accessible={true}
    onPress={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#ECFDF5",
        },
      ]
    }
    testID="confidence-pills-reviews"
  >
    <Text
      style={
        {
          "fontSize": 14,
        }
      }
    >
      ⭐
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
            "lineHeight": 19.5,
          },
          {
            "color": "#059669",
          },
        ]
      }
    >
      results.confidence.pill.reviews
    </Text>
  </View>
  <View
    accessibilityRole="button"
    accessible={true}
    onPress={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#F59E0B22",
        },
      ]
    }
    testID="confidence-pills-specs"
  >
    <Text
      style={
        {
          "fontSize": 14,
        }
      }
    >
      📋
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
            "lineHeight": 19.5,
          },
          {
            "color": "#F59E0B",
          },
        ]
      }
    >
      results.confidence.pill.specs
    </Text>
  </View>
</View>
`;

exports[`ConfidencePills (Bundle C §5) snapshot — all 3 strong, no hide 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": 8,
      "paddingVertical": 4,
    }
  }
  testID="confidence-pills"
>
  <View
    accessibilityRole="button"
    accessible={true}
    onPress={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#ECFDF5",
        },
      ]
    }
    testID="confidence-pills-price"
  >
    <Text
      style={
        {
          "fontSize": 14,
        }
      }
    >
      💰
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
            "lineHeight": 19.5,
          },
          {
            "color": "#059669",
          },
        ]
      }
    >
      results.confidence.pill.price
    </Text>
  </View>
  <View
    accessibilityRole="button"
    accessible={true}
    onPress={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#ECFDF5",
        },
      ]
    }
    testID="confidence-pills-reviews"
  >
    <Text
      style={
        {
          "fontSize": 14,
        }
      }
    >
      ⭐
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
            "lineHeight": 19.5,
          },
          {
            "color": "#059669",
          },
        ]
      }
    >
      results.confidence.pill.reviews
    </Text>
  </View>
  <View
    accessibilityRole="button"
    accessible={true}
    onPress={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#ECFDF5",
        },
      ]
    }
    testID="confidence-pills-specs"
  >
    <Text
      style={
        {
          "fontSize": 14,
        }
      }
    >
      📋
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
            "lineHeight": 19.5,
          },
          {
            "color": "#059669",
          },
        ]
      }
    >
      results.confidence.pill.specs
    </Text>
  </View>
</View>
`;
